# media-workflow-temp

./: .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  c4d_server.py  c4d_worker.py  colors.npy  main.py  pyproject.toml  webhook_worker.py  worker.py  worker_c4d.py
.github/workflows/: docker-image.yml  docker-publish.yml
bench/: high_compute.py  low_compute.py
media_workflow/: activities.py  client.py  color.py  font.py  fontutils.py  image_loader.py  imread.py  imutils.py  llm.py  otel.py  s3.py  schema.py  trace.py  utils.py  worker.py  worker_c4d.py  workflows.py
media_workflow/activities/: __init__.py  audio_waveform.py  blender_preview.py  c4d_preview.py  calibrate.py  color_calibrate.py  document.py  document_thumbnail.py  document_to_pdf.py  download.py  font.py  font_detail.py  font_metadata.py  font_thumbnail.py  image.py  image_color_palette.py  image_detail.py  image_detail_basic.py  image_thumbnail.py  pdf_thumbnail.py  upload.py  utils.py  video.py  video_metadata.py  video_sprite.py  video_thumbnail.py  video_transcode.py  webhook.py
media_workflow/activities/image_detail/: __init__.py  caetgory.py  category.py  core.py  prompts.py  schema.py  types.py
media_workflow/templates/font_detail/: main.md
media_workflow/templates/image_detail/: details.md  main.md
media_workflow/templates/image_detail_basic/en/: details.md  main.md  tags.md
media_workflow/templates/image_detail_basic/zh/: details.md  main.md  tags.md
media_workflow/utils/: fs.py  image.py  llm.py
media_workflow/workflows/: adobe_photoshop_thumbnail.py  adobe_psd_thumbnail.py  image_detail.py  image_thumbnail.py
pylette/: __init__.py  color.py  color_extraction.py  palette.py
scripts/: blend.py  upload.py
tests/: test_adobe_photoshop_thumbnail.py  test_color_calibrate.py  test_file_analysis.py  test_image_detail.py  test_image_loader.py  test_image_thumbnail.py  test_s3.py  test_webhook.py  test_workflows.py
tests/images/: image_application_rgb.eps  image_eps_cmyk.eps  image_heic_rgb.heic
tests/workflows/: test_adobe_psd_thumbnail.py  test_image_thumbnail.py
