[tool.poetry]
name = "media-workflow"
version = "0.1.0"
description = ""
authors = ["sunyizhe <sunyizhe@tezign.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
imageio = {extras = ["all-plugins"], version = "^2.36.1"}
pillow = "^11.0.0"
cairosvg = "^2.7.1"
psd-tools = "^1.10.4"
temporalio = { extras = ["opentelemetry"], version = "^1.8.0" }
boto3 = "^1.35.63"
pytest-asyncio = "^0.24.0"
pytest-xdist = "^3.6.1"
pymupdf = "^1.24.13"
aiohttp = "^3.11.2"
ffmpeg-python = "^0.2.0"
pydub = "^0.25.1"
numpy = "^2.1.3"
fonttools = "^4.55.0"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.2"
opentelemetry-api = "^1.28.2"
opentelemetry-sdk = "^1.28.2"
opentelemetry-exporter-otlp-proto-http = "^1.28.2"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
